tests/ui/duplicate_status.stderr
error: duplicate `#[api_error(...)]` attribute
 --> tests/ui/duplicate_status.rs:7:5
  |
7 |     #[api_error(404)]
  |     ^
